--- a/Lecture Slides/Distributions/distributions.Rmd
+++ b/Lecture Slides/Distributions/distributions.Rmd
@@ -5,7 +5,7 @@ author: "Kyle Butts"
 date: "`r format(Sys.time(), '%d %B %Y')`"
 output:
   xaringan::moon_reader:
-    css: ['default', 'metropolis', 'metropolis-fonts']
+    css: ['default']
     self_contained: true
 nature:
   highlightStyle: github
@@ -61,69 +61,69 @@ class: clear, middle
 <!-- From xaringancolor -->
 
 <div style = "position:fixed; visibility: hidden">
-$\require{color}\definecolor{red_pink}{rgb}{0.901960784313726, 0.254901960784314, 0.450980392156863}$
-$\require{color}\definecolor{turquoise}{rgb}{0.125490196078431, 0.698039215686274, 0.666666666666667}$
-$\require{color}\definecolor{orange}{rgb}{1, 0.647058823529412, 0}$
-$\require{color}\definecolor{red}{rgb}{0.984313725490196, 0.380392156862745, 0.0274509803921569}$
-$\require{color}\definecolor{blue}{rgb}{0.231372549019608, 0.231372549019608, 0.603921568627451}$
-$\require{color}\definecolor{green}{rgb}{0.545098039215686, 0.694117647058824, 0.454901960784314}$
-$\require{color}\definecolor{grey_light}{rgb}{0.701960784313725, 0.701960784313725, 0.701960784313725}$
-$\require{color}\definecolor{grey_mid}{rgb}{0.498039215686275, 0.498039215686275, 0.498039215686275}$
-$\require{color}\definecolor{grey_dark}{rgb}{0.2, 0.2, 0.2}$
-$\require{color}\definecolor{purple}{rgb}{0.415686274509804, 0.352941176470588, 0.803921568627451}$
-$\require{color}\definecolor{slate}{rgb}{0.192156862745098, 0.309803921568627, 0.309803921568627}$
+$$\require{color}\definecolor{purple}{rgb}{0.337254901960784, 0.00392156862745098, 0.643137254901961}$$
+$$\require{color}\definecolor{navy}{rgb}{0.0509803921568627, 0.23921568627451, 0.337254901960784}$$
+$$\require{color}\definecolor{ruby}{rgb}{0.603921568627451, 0.145098039215686, 0.0823529411764706}$$
+$$\require{color}\definecolor{alice}{rgb}{0.0627450980392157, 0.470588235294118, 0.584313725490196}$$
+$$\require{color}\definecolor{daisy}{rgb}{0.92156862745098, 0.788235294117647, 0.266666666666667}$$
+$$\require{color}\definecolor{coral}{rgb}{0.949019607843137, 0.427450980392157, 0.129411764705882}$$
+$$\require{color}\definecolor{kelly}{rgb}{0.509803921568627, 0.576470588235294, 0.337254901960784}$$
+$$\require{color}\definecolor{jet}{rgb}{0.0745098039215686, 0.0823529411764706, 0.0862745098039216}$$
+$$\require{color}\definecolor{asher}{rgb}{0.333333333333333, 0.372549019607843, 0.380392156862745}$$
+$$\require{color}\definecolor{slate}{rgb}{0.192156862745098, 0.309803921568627, 0.309803921568627}$$
+$$\require{color}\definecolor{cranberry}{rgb}{0.901960784313726, 0.254901960784314, 0.450980392156863}$$
 </div>
-
+	
 <script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-  TeX: {
-    Macros: {
-      red_pink: ["{\color{red_pink}{#1}}", 1],
-      turquoise: ["{\color{turquoise}{#1}}", 1],
-      orange: ["{\color{orange}{#1}}", 1],
-      red: ["{\color{red}{#1}}", 1],
-      blue: ["{\color{blue}{#1}}", 1],
-      green: ["{\color{green}{#1}}", 1],
-      grey_light: ["{\color{grey_light}{#1}}", 1],
-      grey_mid: ["{\color{grey_mid}{#1}}", 1],
-      grey_dark: ["{\color{grey_dark}{#1}}", 1],
-      purple: ["{\color{purple}{#1}}", 1],
-      slate: ["{\color{slate}{#1}}", 1]
-    },
-    loader: {load: ['[tex]/color']},
-    tex: {packages: {'[+]': ['color']}}
-  }
-});
+	MathJax.Hub.Config({
+		TeX: {
+			Macros: {
+				purple: ["{\\color{purple}{#1}}", 1],
+				navy: ["{\\color{navy}{#1}}", 1],
+				ruby: ["{\\color{ruby}{#1}}", 1],
+				alice: ["{\\color{alice}{#1}}", 1],
+				daisy: ["{\\color{daisy}{#1}}", 1],
+				coral: ["{\\color{coral}{#1}}", 1],
+				kelly: ["{\\color{kelly}{#1}}", 1],
+				jet: ["{\\color{jet}{#1}}", 1],
+				asher: ["{\\color{asher}{#1}}", 1],
+				slate: ["{\\color{slate}{#1}}", 1],
+				cranberry: ["{\\color{cranberry}{#1}}", 1]
+			},
+			loader: {load: ['[tex]/color']},
+			tex: {packages: {'[+]': ['color']}}
+		}
+	});
 </script>
 
 <style>
-.red_pink {color: #E64173;}
-.turquoise {color: #20B2AA;}
-.orange {color: #FFA500;}
-.red {color: #FB6107;}
-.blue {color: #3B3B9A;}
-.green {color: #8BB174;}
-.grey_light {color: #B3B3B3;}
-.grey_mid {color: #7F7F7F;}
-.grey_dark {color: #333333;}
-.purple {color: #6A5ACD;}
-.slate {color: #314F4F;}
+	.purple {color: #5601A4;}
+	.navy {color: #0D3D56;}
+	.ruby {color: #9A2515;}
+	.alice {color: #107895;}
+	.daisy {color: #EBC944;}
+	.coral {color: #F26D21;}
+	.kelly {color: #829356;}
+	.jet {color: #131516;}
+	.asher {color: #555F61;}
+	.slate {color: #314F4F;}
+	.cranberry {color: #E64173;}
 </style>
 
 
 ```{r flair_color, echo=FALSE}
-library(flair)
-red_pink <- "#E64173"
-turquoise <- "#20B2AA"
-orange <- "#FFA500"
-red <- "#FB6107"
-blue <- "#3B3B9A"
-green <- "#8BB174"
-grey_light <- "#B3B3B3"
-grey_mid <- "#7F7F7F"
-grey_dark <- "#333333"
-purple <- "#6A5ACD"
-slate <- "#314F4F"
+	library(flair)
+	purple <- "#5601A4"
+	navy <- "#0D3D56"
+	ruby <- "#9A2515"
+	alice <- "#107895"
+	daisy <- "#EBC944"
+	coral <- "#F26D21"
+	kelly <- "#829356"
+	jet <- "#131516"
+	asher <- "#555F61"
+	slate <- "#314F4F"
+	cranberry <- "#E64173"
 ```
 
 
@@ -150,7 +150,7 @@ Continuous Case
 ---
 # Probability Distribution Functions
 
-Until now we have discussed probability distributions in very loose terms. We will build a formal definition of a .hi.red_pink[probability distribution function].
+Until now we have discussed probability distributions in very loose terms. We will build a formal definition of a .hi.cranberry[probability distribution function].
 
 
 First we consider the discrete case, and then the continuous case.
@@ -166,13 +166,14 @@ class: clear,middle
 Let $X$ be a discrete random variable defined over sample space $S$ with outcome $x \in S$.
 
 
-The .hi.red_pink[probability mass function] (or pmf) of $X$ is a function that assigns a probability value to every possible outcome of $X$. 
+The .hi.cranberry[probability mass function] (or pmf) of $X$ is a function that assigns a probability value to every possible outcome of $X$. 
 
 We write this as $P_X(x)$, probability of $X=x$.
 
 
 ---
-# Example PMF -- Explicitly Given
+# Example PMF
+.subheader.coral[Explicitly Given]
 
 $X$ is defined as the number of people seated at a random table at a restaurant. The PMF of X is provided below:
 
@@ -198,7 +199,9 @@ pmf_tbl
 
 
 ---
-# Example PMF -- Based on Scenario
+# Example PMF
+.subheader.coral[Based on Scenario]
+
 Suppose you flip a fair coin twice. Let $X$ be the number of heads that appear. The pmf of $X$ is
 
 ```{r pmf-coin, echo=F}
@@ -368,17 +371,16 @@ Suppose that $Y$ is a continuous random variable with pdf $f_Y(y) = 3y^2$ for $0
 
 ```{r, echo = F, out.width = "90%"}
 
-pdf <- function(y) {3*y^2*(y > 0 & y < 1)}
+ex_pdf <- function(y) {3*y^2*(y > 0 & y < 1)}
 
 
 ggplot(data.frame(x = c(-1, 2)), aes(.data$x)) +
     stat_function(
-        fun = pdf,
+        fun = ex_pdf,
         xlim = c(1/4, 1/2), size = 0,
         geom = "area", fill = "#d2382c", alpha = 0.5
     ) +
-    # Normal curve
-    stat_function(fun = pdf, color = "black", size = 1.5) +
+    stat_function(fun = ex_pdf, color = "black", size = 1.5) +
     scale_x_continuous(breaks = -1:2) +
     theme_kyle(base_size = 20) +
     labs(x = "Value", y = "Density")
