--- a/Lecture Slides/Expectations/expectations.Rmd
+++ b/Lecture Slides/Expectations/expectations.Rmd
@@ -5,7 +5,7 @@ author: "Kyle Butts"
 date: "`r format(Sys.time(), '%d %B %Y')`"
 output:
   xaringan::moon_reader:
-    css: ['default', 'metropolis', 'metropolis-fonts']
+    css: ['default']
     self_contained: true
 nature:
   highlightStyle: github
@@ -61,69 +61,69 @@ class: clear, middle
 <!-- From xaringancolor -->
 
 <div style = "position:fixed; visibility: hidden">
-$\require{color}\definecolor{red_pink}{rgb}{0.901960784313726, 0.254901960784314, 0.450980392156863}$
-$\require{color}\definecolor{turquoise}{rgb}{0.125490196078431, 0.698039215686274, 0.666666666666667}$
-$\require{color}\definecolor{orange}{rgb}{1, 0.647058823529412, 0}$
-$\require{color}\definecolor{red}{rgb}{0.984313725490196, 0.380392156862745, 0.0274509803921569}$
-$\require{color}\definecolor{blue}{rgb}{0.231372549019608, 0.231372549019608, 0.603921568627451}$
-$\require{color}\definecolor{green}{rgb}{0.545098039215686, 0.694117647058824, 0.454901960784314}$
-$\require{color}\definecolor{grey_light}{rgb}{0.701960784313725, 0.701960784313725, 0.701960784313725}$
-$\require{color}\definecolor{grey_mid}{rgb}{0.498039215686275, 0.498039215686275, 0.498039215686275}$
-$\require{color}\definecolor{grey_dark}{rgb}{0.2, 0.2, 0.2}$
-$\require{color}\definecolor{purple}{rgb}{0.415686274509804, 0.352941176470588, 0.803921568627451}$
-$\require{color}\definecolor{slate}{rgb}{0.192156862745098, 0.309803921568627, 0.309803921568627}$
+$$\require{color}\definecolor{purple}{rgb}{0.337254901960784, 0.00392156862745098, 0.643137254901961}$$
+$$\require{color}\definecolor{navy}{rgb}{0.0509803921568627, 0.23921568627451, 0.337254901960784}$$
+$$\require{color}\definecolor{ruby}{rgb}{0.603921568627451, 0.145098039215686, 0.0823529411764706}$$
+$$\require{color}\definecolor{alice}{rgb}{0.0627450980392157, 0.470588235294118, 0.584313725490196}$$
+$$\require{color}\definecolor{daisy}{rgb}{0.92156862745098, 0.788235294117647, 0.266666666666667}$$
+$$\require{color}\definecolor{coral}{rgb}{0.949019607843137, 0.427450980392157, 0.129411764705882}$$
+$$\require{color}\definecolor{kelly}{rgb}{0.509803921568627, 0.576470588235294, 0.337254901960784}$$
+$$\require{color}\definecolor{jet}{rgb}{0.0745098039215686, 0.0823529411764706, 0.0862745098039216}$$
+$$\require{color}\definecolor{asher}{rgb}{0.333333333333333, 0.372549019607843, 0.380392156862745}$$
+$$\require{color}\definecolor{slate}{rgb}{0.192156862745098, 0.309803921568627, 0.309803921568627}$$
+$$\require{color}\definecolor{cranberry}{rgb}{0.901960784313726, 0.254901960784314, 0.450980392156863}$$
 </div>
-
+	
 <script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-  TeX: {
-    Macros: {
-      red_pink: ["{\color{red_pink}{#1}}", 1],
-      turquoise: ["{\color{turquoise}{#1}}", 1],
-      orange: ["{\color{orange}{#1}}", 1],
-      red: ["{\color{red}{#1}}", 1],
-      blue: ["{\color{blue}{#1}}", 1],
-      green: ["{\color{green}{#1}}", 1],
-      grey_light: ["{\color{grey_light}{#1}}", 1],
-      grey_mid: ["{\color{grey_mid}{#1}}", 1],
-      grey_dark: ["{\color{grey_dark}{#1}}", 1],
-      purple: ["{\color{purple}{#1}}", 1],
-      slate: ["{\color{slate}{#1}}", 1]
-    },
-    loader: {load: ['[tex]/color']},
-    tex: {packages: {'[+]': ['color']}}
-  }
-});
+	MathJax.Hub.Config({
+		TeX: {
+			Macros: {
+				purple: ["{\\color{purple}{#1}}", 1],
+				navy: ["{\\color{navy}{#1}}", 1],
+				ruby: ["{\\color{ruby}{#1}}", 1],
+				alice: ["{\\color{alice}{#1}}", 1],
+				daisy: ["{\\color{daisy}{#1}}", 1],
+				coral: ["{\\color{coral}{#1}}", 1],
+				kelly: ["{\\color{kelly}{#1}}", 1],
+				jet: ["{\\color{jet}{#1}}", 1],
+				asher: ["{\\color{asher}{#1}}", 1],
+				slate: ["{\\color{slate}{#1}}", 1],
+				cranberry: ["{\\color{cranberry}{#1}}", 1]
+			},
+			loader: {load: ['[tex]/color']},
+			tex: {packages: {'[+]': ['color']}}
+		}
+	});
 </script>
 
 <style>
-.red_pink {color: #E64173;}
-.turquoise {color: #20B2AA;}
-.orange {color: #FFA500;}
-.red {color: #FB6107;}
-.blue {color: #3B3B9A;}
-.green {color: #8BB174;}
-.grey_light {color: #B3B3B3;}
-.grey_mid {color: #7F7F7F;}
-.grey_dark {color: #333333;}
-.purple {color: #6A5ACD;}
-.slate {color: #314F4F;}
+	.purple {color: #5601A4;}
+	.navy {color: #0D3D56;}
+	.ruby {color: #9A2515;}
+	.alice {color: #107895;}
+	.daisy {color: #EBC944;}
+	.coral {color: #F26D21;}
+	.kelly {color: #829356;}
+	.jet {color: #131516;}
+	.asher {color: #555F61;}
+	.slate {color: #314F4F;}
+	.cranberry {color: #E64173;}
 </style>
 
 
 ```{r flair_color, echo=FALSE}
-library(flair)
-red_pink <- "#E64173"
-turquoise <- "#20B2AA"
-orange <- "#FFA500"
-red <- "#FB6107"
-blue <- "#3B3B9A"
-green <- "#8BB174"
-grey_light <- "#B3B3B3"
-grey_mid <- "#7F7F7F"
-grey_dark <- "#333333"
-purple <- "#6A5ACD"
-slate <- "#314F4F"
+	library(flair)
+	purple <- "#5601A4"
+	navy <- "#0D3D56"
+	ruby <- "#9A2515"
+	alice <- "#107895"
+	daisy <- "#EBC944"
+	coral <- "#F26D21"
+	kelly <- "#829356"
+	jet <- "#131516"
+	asher <- "#555F61"
+	slate <- "#314F4F"
+	cranberry <- "#E64173"
 ```
 
 ## Expectations
@@ -131,13 +131,13 @@ slate <- "#314F4F"
 ---
 # Outline
 
-.hi.orange[Expectation]
+.hi.coral[Expectation]
 
 - Definition
 - Properties
 
 
-.hi.turquoise[Variance]
+.hi.ruby[Variance]
 
 - Definiton
 - Properties
@@ -163,7 +163,7 @@ Most of econometrics revolves around finding the best .it[conditional expectatio
 ---
 # Expectation: Discrete Case
 
-First we give the mathematical definition of .hi.orange[expectation] for discrete random variables.
+First we give the mathematical definition of .hi.coral[expectation] for discrete random variables.
 
 Let $X$ be a discrete random variable with pmf $p_X(x)$. 
 
@@ -250,7 +250,7 @@ Suppose $Y$ is a continuous random variable with the pdf $f_Y(y)=3y^2$ for $0<y<
 ---
 # Clicker Question
 
-Suppose $X$ has a .hi.red_pink[uniform distribution] over $(a,b)$ denoted 
+Suppose $X$ has a .hi.cranberry[uniform distribution] over $(a,b)$ denoted 
 
 $X \sim U(a,b)$. That is, $f_x(x) = \frac{1}{b-a}$ for $a<x<b$. What is $E(X)$?
 
@@ -353,7 +353,7 @@ Recall the variance of a sample is $$s^2 = \frac{1}{n-1} \sum_{i=1}^n (X_i - \ba
 
 We can use expectations to define a similar expression for the population variance. 
 
-Let $X$ be a random variable with $E(X)< \infty$. Then the .hi.turquoise[variance] of $X$ is:
+Let $X$ be a random variable with $E(X)< \infty$. Then the .hi.ruby[variance] of $X$ is:
 
 $$ 
   Var(X) = E[(X-E(X))^2] 
@@ -390,7 +390,7 @@ The result is the expected value of g(X). We will use this property to calculate
 ---
 # Example
 
-While $E(X)$ is called the .hi.green[first moment], we call $E(X^2)$ the .hi.orange[second moment] of X. 
+While $E(X)$ is called the .hi.kelly[first moment], we call $E(X^2)$ the .hi.coral[second moment] of X. 
 
 Therefore, we calculate $E[X^2]$ using the following equation: 
 
@@ -415,13 +415,13 @@ $$
 
 --
 $$ 
-E(X^2) = 0^2 \cdot (\frac{1}{4})+ 1^2 \cdot (\frac{1}{2}) + 2^2 \cdot  (\frac{1}{4}) = \frac{1}{2} + 1 = \frac{3}{2} ^{\color{red_pink}*}
+E(X^2) = 0^2 \cdot (\frac{1}{4})+ 1^2 \cdot (\frac{1}{2}) + 2^2 \cdot  (\frac{1}{4}) = \frac{1}{2} + 1 = \frac{3}{2} ^{\color{cranberry}*}
 $$
 
 This means that 
 $$V(X)=E(X^2)-[E(X)]^2 = \frac{3}{2}-1^2 = \frac{1}{2}$$
 
-.footnote[.red_pink[<sup>*</sup>].hi[Never] square probabilities when solving \(E(X^2)\). Only square \(X\) values]
+.footnote[.cranberry[<sup>*</sup>].hi[Never] square probabilities when solving \(E(X^2)\). Only square \(X\) values]
 
 
 ---
@@ -434,9 +434,9 @@ There are several important properties of the variance operator:
 
 - $Var(aX+b) = a^2Var(X)$
 
-- $Var(aX+bY) = a^2Var(X)+b^2Var(Y)+2ab\cdot Cov(X,Y).$<sup>.red_pink[*]</sup> 
+- $Var(aX+bY) = a^2Var(X)+b^2Var(Y)+2ab\cdot Cov(X,Y).$<sup>.cranberry[*]</sup> 
 
-.footnote[.red_pink[<sup>*</sup>] We will discuss more about covariance later, when $X$ and $Y$ are independent then the covariance is zero]
+.footnote[.cranberry[<sup>*</sup>] We will discuss more about covariance later, when $X$ and $Y$ are independent then the covariance is zero]
 
 
 
