--- a/Lecture Slides/preamble.Rmd
+++ b/Lecture Slides/preamble.Rmd
@@ -30,6 +30,18 @@ make_gt_title <- function(title) {
 gt::html(glue::glue("<span class='hi slate' style='display: block; margin-bottom: 8px;'>{title}</span>"))
 }
 
+# A blank theme for ggplot
+theme_empty <- theme_bw() + theme(
+  line = element_blank(),
+  rect = element_blank(),
+  strip.text = element_blank(),
+  axis.text = element_blank(),
+  plot.title = element_blank(),
+  axis.title = element_blank(),
+  plot.margin = structure(c(0, 0, -1, -1), unit = "lines", valid.unit = 3L, class = "unit"),
+  legend.position = "none"
+)
+
 xaringanExtra::use_scribble()
 ```
 
