--- a/R Assignments/HW0/HW0.Rmd
+++ b/R Assignments/HW0/HW0.Rmd
@@ -9,13 +9,13 @@ output:
 
 # Checking that you read the Markdown Section
 
-1. Please provide a link to a song you like:
+1. Please provide a link to a song you like. If you don't know how, refer to [these notes](https://evalf21.classes.andrewheiss.com/resource/markdown/)
 
 
 
 
 
-2. Insert a code chunk with the content being `1 + 1`.
+2. Insert a code chunk with the content being `1 + 1`. If you don't know what a code chunk is, refer to [these notes](https://evalf21.classes.andrewheiss.com/resource/rmarkdown/). Your knitted document should have the results of the code displayed below, i.e. `# 2`.
 
 
 
