--- a/R Assignments/HW0/HW0_Instructions.Rmd
+++ b/R Assignments/HW0/HW0_Instructions.Rmd
@@ -76,20 +76,26 @@ Markdown and RMarkdown. To begin, read through these pages:
 
 Two things for you to do for this assignment.
 
-1. Chose a theme for our html_document
+
+- Chose a theme for our html_document
 
   At the top of the Rmd document, there is `YAML` data between the two `---` tags. Choose a theme by looking at this [Theme Gallery](https://www.datadreaming.org/post/r-markdown-theme-gallery/).  If it says from `____` package, you can install that package using `install.packages("____")`. 
   
   While you are there, change the name parameter to your name.
 
-2. Fill out the few tasks given in the document. 
-
-3. Click the `knit` button to creat html file. This will create the file in the same location as where you saved you HW0.Rmd file.
-
-```{r R-knit, echo = F, out.width = "50%"}
-knitr::include_graphics("R-knit.png")
+- Fill out the few tasks given in the document. Your link should have meaningful text (e.g. the song name) and our code chunk should look like 
+  
+````r
+```{r}`r ""`
+1 + 1
 ```
+````
 
 
-4. Upload completed html file to canvas.
+- Click the `knit` button to creat html file. This will create the file in the same location as where you saved you HW0.Rmd file.
+  
+  ```{r R-knit, echo = F, out.width = "50%"}
+  knitr::include_graphics("R-knit.png")
+  ```
 
+- Upload completed html file to canvas. 
