--- a/document-preamble.Rmd
+++ b/document-preamble.Rmd
@@ -5,7 +5,7 @@ library(knitr)
 library(here)
 library(gt)
 library(patchwork)
-library(kfbmisc)
+# library(kfbmisc)
 
 # Knitr options
 opts_chunk$set(
